# intheleaves

leaves/: build.sh  complete_activities_list.json  pyproject.toml  requirements.txt
leaves/leaf/: urls.py  views.py
leaves/leaf/static/: fetch.js
leaves/leaves/: asgi.py  settings.py  urls.py  wsgi.py
leaves/templates/: base.html  home.html  js_chart_strava.html
